--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -78,47 +78,61 @@
     opacity: 0;
     visibility: hidden;
     overflow: hidden;
-    background-image: linear-gradient($color-blue, $color-background-tertiary);
+    background-image: radial-gradient(
+      circle at 1% 5%,
+      $color-blue,
+      $color-background-tertiary 92%
+    );
     z-index: 50;
 
     &.open {
       opacity: 1;
       visibility: visible;
       height: 100vh;
-      transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
-      .logo_container {
-        position: absolute;
-        top: 50px;
-        left: 16px;
+      .navigation__navbar {
+        height: 512px;
+        top: 200px;
       }
 
-      li {
-        animation: fadeInRight 0.5s ease forwards;
-        animation-delay: 0.35s;
+      .navigation__item {
+        color: $color-white;
+        font-size: 40px;
+        opacity: 0;
+
+        animation: fadeIn 2s forwards;
+        animation-delay: 0.3s;
 
         &:nth-of-type(2) {
-          animation-delay: 0.4s;
-        }
-
-        &:nth-of-type(3) {
-          animation-delay: 0.45s;
-        }
-
-        &:nth-of-type(4) {
-          animation-delay: 0.5s;
-        }
-
-        &:nth-of-type(5) {
-          animation-delay: 0.55s;
-        }
-
-        &:nth-of-type(6) {
           animation-delay: 0.6s;
         }
 
+        &:nth-of-type(3) {
+          animation-delay: 0.8s;
+        }
+
+        &:nth-of-type(4) {
+          animation-delay: 1s;
+        }
+
+        &:nth-of-type(5) {
+          animation-delay: 1.2s;
+        }
+
+        &:nth-of-type(6) {
+          animation-delay: 1.4s;
+        }
+
         &:nth-of-type(7) {
-          animation-delay: 0.65s;
+          animation-delay: 1.6s;
+        }
+
+        &:not(:last-child) {
+          margin-bottom: 20px;
+        }
+
+        a {
+          font-size: 40px;
         }
       }
     }
@@ -128,10 +142,10 @@
     width: 98px;
     height: 35px;
 
-    position: fixed;
+    position: absolute;
     top: 31px;
     left: 16px;
-    z-index: 150;
+    //z-index: 150;
 
     .logo {
       width: inherit;
@@ -142,25 +156,23 @@
   &__navbar {
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolut;
     top: 0;
     left: 0;
     z-index: 75;
   }
 
-  &__list {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    list-style: none;
+  &__list {    
+    position: relative;
+    margin: 160px auto;
+
     text-align: center;
-    width: 100%;
+    border: 2px solid rgb(0, 255, 0);
   }
 
   &__item {
     display: block;
-    height: 25%;
+    width: auto;
     height: calc(100% / 7);
     min-height: 50px;
     position: relative;
@@ -168,21 +180,68 @@
   }
 
   &__link {
-    display: block;
+    border: 1px solid red;
+    display: inline-block;
+    width: auto;
     position: relative;
     color: $color-white;
     text-decoration: none;
     overflow: hidden;
     opacity: 0.7;
-    transform: scale(1);
-    transition: all 0.3s;
+    padding-left: 30px;
+
+    &::before {
+      display: inline-block;
+      content: "";
+      width: 0;
+      height: 45px;
+      
+      background-color: $color-background-tertiary-light;
+      position: absolute;
+      left: 20%;
+      transform: translateX(-15px);
+      z-index: -1;
+
+      transition: width 0.6s ease, height 0.6s ease;
+      transition-duration: 0.6s, 0.6s;
+      transition-timing-function: ease, ease;
+      transition-delay: 0s, 0s;
+      transition-property: width, height;
+    }
+
+    &--first {
+      position: relative;
+
+      &::before {
+        display: block;
+        content: "";
+        width: 40px;
+        height: 45px;
+        background-color: $color-background-tertiary;
+        position: absolute;
+        left: 25%;
+        z-index: -1;
+      }
+    }
 
     &:hover,
-    &:focus,
     &:active {
-      opacity: 1;
-      transform: scale(1.2);
-      transition: all 0.3s;
+      &::before {
+        width: 40px;
+      }
+    }
+  }
+
+  &__contact-wrapper {
+    position: absolute;
+    bottom: 100px;
+    left: calc((100% - 280px) / 2);
+    text-align: center;
+
+    a,
+    i {
+      color: $color-white;
+      opacity: 0.7;
     }
   }
 }
@@ -193,15 +252,25 @@
   .navigation {
     position: absolute;
     top: 0;
-    left: 0;    
+    left: 0;
     z-index: 2;
 
+    &__logo {
+      position: absolute;
+      top: 31px;
+      left: 245px;
+
+      .logo {
+        width: inherit;
+        height: inherit;
+      }
+    }
 
     &__button {
       height: 100px;
       width: 100px;
       border-radius: 50%;
-      position: fixed;
+      position: absolute;
       top: 40%;
       left: 60px;
 
@@ -219,15 +288,36 @@
         font-size: 1.2rem;
         letter-spacing: 3px;
       }
+
+      &.full-menu {
+        padding: 0;
+        position: absolute;
+        top: 40%;
+        left: 100px;
+        transition: all 0.3s;
+
+        &::after {
+          color: $color-white;
+        }
+      }
+
+      &__icon,
+      &__icon::before,
+      &__icon::after {
+        background-color: $color-black-base;
+        width: 20px;
+      }
     }
 
-    &__icon,
-    &__icon::before,
-    &__icon::after {
-      background-color: $color-black-base;
-      width: 20px;
-    }
+    &__background.open &__list {
+      height: 515px;
 
-    
+      transform: translate(-600px, -300px);
+
+      a {
+        font-size: 48px;
+        text-align: left;
+      }
+    }
   }
 }
